src/test/run-pass/unique-init.rs
fn main() {
    let i = ~100;
}